# process-wick

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
tests/: README.md  basic_integration_tests.rs  integration_tests.rs
