[package]
name = "process-wick"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

# Unix-specific dependencies with necessary features enabled
nix = { version = "0.27", features = ["signal", "process"] }
libc = { version = "0.2" }

# Windows-specific dependencies (only used for Windows)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "handleapi",
    "processthreadsapi",
    "tlhelp32",
    "winnt",
] }
