[package]
name = "process-wick"
version = "0.1.5"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
chrono = "0.4.41"
sysinfo = "0.35.2"

# Unix-specific dependencies for signal handling
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal", "process"] }
libc = { version = "0.2.174" }
